Ticketing section, online registration, gallery and contact form

--- a/index.html
+++ b/index.html
@@ -34,14 +34,12 @@
                     <img src="./assets/img/about.jpg" alt="About Us" />
                 </div>
                 <div class="bio">
-                    <h2>About Us</h2>
-                    <br />
+                    <h2>Stay Connected</h2>
                     <p>
                         EventPlanner Pro is a team of passionate event enthusiasts dedicated to simplifying the world of event management.
                         With years of experience in organizing and planning a wide range of events, we understand the unique challenges
                         faced by event organizers and planners.
                     </p>
-                    <br />
                     <p>
                         Our mission is to empower event professionals with cutting-edge tools and seamless solutions. We believe that every
                         event has the potential to be unforgettable, and that's why we've developed EventPlanner Pro—a comprehensive
@@ -49,19 +47,149 @@
                         Join us on the journey to create memorable and stress-free events. Discover the power of EventPlanner Pro and take
                         your event planning to the next level!
                     </p>
+                    <a class="button" href="#">Read More</a>
                 </div>
             </section>
 
             <section class="ticketing">
-                <h2>Ticketing</h2>
+                <div class="headline">
+                    <h2>Ticketing Services</h2>
+                    <p>
+                        EventPlanner Pro simplifies ticket management for event organizers, ensuring a hassle-free experience for you and
+                        your attendees.
+                    </p>
+                </div>
+
+                <div class="services">
+                    <div class="service-box">
+                        <div class="icon">
+                            <img src="./assets/icons/ticket.png" alt="Ticket Icon" />
+                        </div>
+                        <div class="text">
+                            <h3>Easy online ticket creation and customization</h3>
+                            <p>Design and tailor your tickets to match your event's branding and requirements effortlessly.</p>
+                        </div>
+                    </div>
+                    <div class="service-box">
+                        <div class="icon">
+                            <img src="./assets/icons/secure.png" alt="Secure Payment Icon" />
+                        </div>
+                        <div class="text">
+                            <h3>Secure payment processing for ticket sales</h3>
+                            <p>Ensure the security of your ticket sales with EventPlanner Pro's secure payment processing.</p>
+                        </div>
+                    </div>
+                    <div class="service-box">
+                        <div class="icon">
+                            <img src="./assets/icons/track.png" alt="Real Time Tracking Icon" />
+                        </div>
+                        <div class="text">
+                            <h3>Real-time tracking of ticket sales and availability</h3>
+                            <p>Stay in control of your event's ticketing with real-time tracking.</p>
+                        </div>
+                    </div>
+                    <div class="service-box">
+                        <div class="icon">
+                            <img src="./assets/icons/promotion.png" alt="Promotion Icon" />
+                        </div>
+                        <div class="text">
+                            <h3>Seamless integration with event promotion tools</h3>
+                            <p>
+                                Reach your target audience effectively through email marketing, social media, and more, all from one
+                                platform.
+                            </p>
+                        </div>
+                    </div>
+                </div>
             </section>
 
             <section class="register">
-                <h2>Register Online</h2>
+                <h2>Online Registration</h2>
+                <div class="showcase">
+                    <div class="showcase-box">
+                        <div class="icon">
+                            <img src="./assets/icons/paperwork.png" alt="Paperwork Icon" />
+                        </div>
+                        <h3>Reduced paperwork and manual data entry</h3>
+                        <p>
+                            Say goodbye to the days of drowning in paperwork and manual data entry. With EventPlanner Pro's online
+                            registration, you can effortlessly digitize your event's registration process. No more shuffling through stacks
+                            of forms or deciphering handwritten information. Streamline your operations and save time by automating data
+                            collection and management.
+                        </p>
+                        <a href="#">Learn More</a>
+                    </div>
+                    <div class="showcase-box">
+                        <div class="icon">
+                            <img src="./assets/icons/concert.png" alt="Concert Icon" />
+                        </div>
+                        <h3>Enhanced attendee experience with easy registration</h3>
+                        <p>
+                            We prioritize the attendee experience. EventPlanner Pro's user-friendly online registration ensures that
+                            attendees have a smooth and hassle-free registration process. Say goodbye to confusing and cumbersome forms. Our
+                            intuitive interface makes it easy for attendees to register for your event, encouraging more participation and a
+                            positive first impression.
+                        </p>
+                        <a href="#">Learn More</a>
+                    </div>
+                    <div class="showcase-box">
+                        <div class="icon">
+                            <img src="./assets/icons/check.png" alt="Check Icon" />
+                        </div>
+                        <h3>Simplified check-in process on the event day</h3>
+                        <p>
+                            On the day of your event, efficiency is key. EventPlanner Pro simplifies the check-in process, allowing you to
+                            breeze through attendee arrivals. Utilize our QR code-based check-in system to swiftly verify registrations and
+                            grant access to your event. No more long lines or logistical headaches—just a seamless start to your event.
+                        </p>
+                        <a href="#">Learn More</a>
+                    </div>
+                    <div class="showcase-box">
+                        <div class="icon">
+                            <img src="./assets/icons/data.png" alt="Data Icon" />
+                        </div>
+                        <h3>Improved data accuracy</h3>
+                        <p>
+                            Accurate data is the backbone of successful event planning. With EventPlanner Pro, you can count on precise and
+                            reliable attendee information. Eliminate the risks of data entry errors and outdated spreadsheets. Our system
+                            ensures that you have access to up-to-date and accurate attendee data, making event management more efficient
+                            and effective.
+                        </p>
+                        <a href="#">Learn More</a>
+                    </div>
+                </div>
+                <div class="arrows">
+                    <img class="left-arrow" id="left-arrow" src="./assets/icons/arrow-left.png" alt="Left Arrow Icon" />
+                    <img class="right-arrow" id="right-arrow" src="./assets/icons/arrow-right.png" alt="Right Arrow Icon" />
+                </div>
+            </section>
+
+            <section class="gallery">
+                <h2>Event Gallery</h2>
+                <div class="gallery-grid">
+                    <div class="img1"><img src="./assets/img/gallery-2.jpg" alt="Small Concert Event" /></div>
+                    <div class="img2"><img src="./assets/img/gallery-1.jpg" alt="Dinner Event" /></div>
+                    <div class="img3"><img src="./assets/img/gallery-3.jpg" alt="Wedding Event" /></div>
+                    <div class="img4"><img src="./assets/img/gallery-5.jpg" alt="Concert Event" /></div>
+                    <div class="img5"><img src="./assets/img/gallery-4.jpg" alt="Party Event" /></div>
+                </div>
             </section>
 
             <section class="contact">
-                <h2>Contact Us</h2>
+                <div class="text">
+                    <h2><span>Get in touch with</span><span class="logo">EventPlanner Pro</span></h2>
+                    <p>Got questions or need assistance? We're here to assist you.</p>
+                    <p>
+                        Use the contact form to reach out, and we'll respond promptly. We're eager to help you make your events
+                        extraordinary with EventPlanner Pro!
+                    </p>
+                </div>
+                <form action="#" class="contact-form">
+                    <input type="text" name="name" id="name" placeholder="Name" />
+                    <input type="email" name="email" id="email" placeholder="Email" />
+                    <textarea name="message" id="message" placeholder="Message"></textarea>
+                    <button type="submit">Send Message</button>
+                </form>
             </section>
         </main>
 
