--- a/index.html
+++ b/index.html
@@ -21,6 +21,19 @@
                         <li><a href="#">Contact Us</a></li>
                     </ul>
                 </nav>
+                <nav class="mobile-menu">
+                    <div class="menu-icon">
+                        <div class="line line-top"></div>
+                        <div class="line line-middle"></div>
+                        <div class="line line-bottom"></div>
+                    </div>
+                    <ul id="mobile-nav">
+                        <li><a href="#about">About Us</a></li>
+                        <li><a href="#">Ticketing</a></li>
+                        <li><a href="#">Register</a></li>
+                        <li><a href="#">Contact Us</a></li>
+                    </ul>
+                </nav>
             </div>
 
             <section class="hero" id="hero">
@@ -105,59 +118,180 @@
 
             <section class="register">
                 <h2>Online Registration</h2>
-                <div class="showcase">
-                    <div class="showcase-box">
-                        <div class="icon">
-                            <img src="./assets/icons/paperwork.png" alt="Paperwork Icon" />
+                <div class="showcase-container" id="showcase-container">
+                    <div class="slider">
+                        <div class="showcase">
+                            <div class="showcase-box">
+                                <div class="icon">
+                                    <img src="./assets/icons/paperwork.png" alt="Paperwork Icon" />
+                                </div>
+                                <h3>Reduced paperwork and manual data entry</h3>
+                                <p>
+                                    Say goodbye to the days of drowning in paperwork and manual data entry. With EventPlanner Pro's online
+                                    registration, you can effortlessly digitize your event's registration process. No more shuffling through
+                                    stacks of forms or deciphering handwritten information. Streamline your operations and save time by
+                                    automating data collection and management.
+                                </p>
+                                <a href="#">Learn More</a>
+                            </div>
+                            <div class="showcase-box">
+                                <div class="icon">
+                                    <img src="./assets/icons/concert.png" alt="Concert Icon" />
+                                </div>
+                                <h3>Enhanced attendee experience with easy registration</h3>
+                                <p>
+                                    We prioritize the attendee experience. EventPlanner Pro's user-friendly online registration ensures that
+                                    attendees have a smooth and hassle-free registration process. Say goodbye to confusing and cumbersome
+                                    forms. Our intuitive interface makes it easy for attendees to register for your event, encouraging more
+                                    participation and a positive first impression.
+                                </p>
+                                <a href="#">Learn More</a>
+                            </div>
                         </div>
-                        <h3>Reduced paperwork and manual data entry</h3>
-                        <p>
-                            Say goodbye to the days of drowning in paperwork and manual data entry. With EventPlanner Pro's online
-                            registration, you can effortlessly digitize your event's registration process. No more shuffling through stacks
-                            of forms or deciphering handwritten information. Streamline your operations and save time by automating data
-                            collection and management.
-                        </p>
-                        <a href="#">Learn More</a>
-                    </div>
-                    <div class="showcase-box">
-                        <div class="icon">
-                            <img src="./assets/icons/concert.png" alt="Concert Icon" />
+                        <div class="showcase">
+                            <div class="showcase-box">
+                                <div class="icon">
+                                    <img src="./assets/icons/check.png" alt="Check Icon" />
+                                </div>
+                                <h3>Simplified check-in process on the event day</h3>
+                                <p>
+                                    On the day of your event, efficiency is key. EventPlanner Pro simplifies the check-in process, allowing
+                                    you to breeze through attendee arrivals. Utilize our QR code-based check-in system to swiftly verify
+                                    registrations and grant access to your event. No more long lines or logistical headaches—just a seamless
+                                    start to your event.
+                                </p>
+                                <a href="#">Learn More</a>
+                            </div>
+                            <div class="showcase-box">
+                                <div class="icon">
+                                    <img src="./assets/icons/data.png" alt="Data Icon" />
+                                </div>
+                                <h3>Improved data accuracy</h3>
+                                <p>
+                                    Accurate data is the backbone of successful event planning. With EventPlanner Pro, you can count on
+                                    precise and reliable attendee information. Eliminate the risks of data entry errors and outdated
+                                    spreadsheets. Our system ensures that you have access to up-to-date and accurate attendee data, making
+                                    event management more efficient and effective.
+                                </p>
+                                <a href="#">Learn More</a>
+                            </div>
                         </div>
-                        <h3>Enhanced attendee experience with easy registration</h3>
-                        <p>
-                            We prioritize the attendee experience. EventPlanner Pro's user-friendly online registration ensures that
-                            attendees have a smooth and hassle-free registration process. Say goodbye to confusing and cumbersome forms. Our
-                            intuitive interface makes it easy for attendees to register for your event, encouraging more participation and a
-                            positive first impression.
-                        </p>
-                        <a href="#">Learn More</a>
-                    </div>
-                    <div class="showcase-box">
-                        <div class="icon">
-                            <img src="./assets/icons/check.png" alt="Check Icon" />
+                        <div class="showcase">
+                            <div class="showcase-box">
+                                <div class="icon">
+                                    <img src="./assets/icons/payment.png" alt="Payment Icon" />
+                                </div>
+                                <h3>Efficient Payment Processing</h3>
+                                <p>
+                                    EventPlanner Pro offers seamless and secure payment processing for your event. Say goodbye to the hassle
+                                    of managing payments manually. Our platform provides a secure environment for both you and your
+                                    attendees to complete transactions. From ticket sales to registration fees, you can trust EventPlanner
+                                    Pro to handle payments efficiently, reducing the burden on your financial management.
+                                </p>
+                                <a href="#">Learn More</a>
+                            </div>
+                            <div class="showcase-box">
+                                <div class="icon">
+                                    <img src="./assets/icons/form.png" alt="Form Icon" />
+                                </div>
+                                <h3>Customizable Registration Forms</h3>
+                                <p>
+                                    Tailor your registration process to your event's unique requirements with EventPlanner Pro's
+                                    customizable forms. Whether you need to gather specific attendee information, preferences, or dietary
+                                    restrictions, our platform allows you to create registration forms that match your event's needs. Make
+                                    attendee registration a breeze by collecting the exact data you need to enhance their experience.
+                                </p>
+                                <a href="#">Learn More</a>
+                            </div>
                         </div>
-                        <h3>Simplified check-in process on the event day</h3>
-                        <p>
-                            On the day of your event, efficiency is key. EventPlanner Pro simplifies the check-in process, allowing you to
-                            breeze through attendee arrivals. Utilize our QR code-based check-in system to swiftly verify registrations and
-                            grant access to your event. No more long lines or logistical headaches—just a seamless start to your event.
-                        </p>
-                        <a href="#">Learn More</a>
-                    </div>
-                    <div class="showcase-box">
-                        <div class="icon">
-                            <img src="./assets/icons/data.png" alt="Data Icon" />
-                        </div>
-                        <h3>Improved data accuracy</h3>
-                        <p>
-                            Accurate data is the backbone of successful event planning. With EventPlanner Pro, you can count on precise and
-                            reliable attendee information. Eliminate the risks of data entry errors and outdated spreadsheets. Our system
-                            ensures that you have access to up-to-date and accurate attendee data, making event management more efficient
-                            and effective.
-                        </p>
-                        <a href="#">Learn More</a>
                     </div>
                 </div>
+
+                <div class="showcase-container-mobile" id="showcase-container-mobile">
+                    <div class="slider">
+                        <div class="showcase" id="showcase-mobile">
+                            <div class="showcase-box">
+                                <div class="icon">
+                                    <img src="./assets/icons/paperwork.png" alt="Paperwork Icon" />
+                                </div>
+                                <h3>Reduced paperwork and manual data entry</h3>
+                                <p>
+                                    Say goodbye to the days of drowning in paperwork and manual data entry. With EventPlanner Pro's online
+                                    registration, you can effortlessly digitize your event's registration process. No more shuffling through
+                                    stacks of forms or deciphering handwritten information. Streamline your operations and save time by
+                                    automating data collection and management.
+                                </p>
+                                <a href="#">Learn More</a>
+                            </div>
+                            <div class="showcase-box">
+                                <div class="icon">
+                                    <img src="./assets/icons/concert.png" alt="Concert Icon" />
+                                </div>
+                                <h3>Enhanced attendee experience with easy registration</h3>
+                                <p>
+                                    We prioritize the attendee experience. EventPlanner Pro's user-friendly online registration ensures that
+                                    attendees have a smooth and hassle-free registration process. Say goodbye to confusing and cumbersome
+                                    forms. Our intuitive interface makes it easy for attendees to register for your event, encouraging more
+                                    participation and a positive first impression.
+                                </p>
+                                <a href="#">Learn More</a>
+                            </div>
+                            <div class="showcase-box">
+                                <div class="icon">
+                                    <img src="./assets/icons/check.png" alt="Check Icon" />
+                                </div>
+                                <h3>Simplified check-in process on the event day</h3>
+                                <p>
+                                    On the day of your event, efficiency is key. EventPlanner Pro simplifies the check-in process, allowing
+                                    you to breeze through attendee arrivals. Utilize our QR code-based check-in system to swiftly verify
+                                    registrations and grant access to your event. No more long lines or logistical headaches—just a seamless
+                                    start to your event.
+                                </p>
+                                <a href="#">Learn More</a>
+                            </div>
+                            <div class="showcase-box">
+                                <div class="icon">
+                                    <img src="./assets/icons/data.png" alt="Data Icon" />
+                                </div>
+                                <h3>Improved data accuracy</h3>
+                                <p>
+                                    Accurate data is the backbone of successful event planning. With EventPlanner Pro, you can count on
+                                    precise and reliable attendee information. Eliminate the risks of data entry errors and outdated
+                                    spreadsheets. Our system ensures that you have access to up-to-date and accurate attendee data, making
+                                    event management more efficient and effective.
+                                </p>
+                                <a href="#">Learn More</a>
+                            </div>
+                            <div class="showcase-box">
+                                <div class="icon">
+                                    <img src="./assets/icons/payment.png" alt="Payment Icon" />
+                                </div>
+                                <h3>Efficient Payment Processing</h3>
+                                <p>
+                                    EventPlanner Pro offers seamless and secure payment processing for your event. Say goodbye to the hassle
+                                    of managing payments manually. Our platform provides a secure environment for both you and your
+                                    attendees to complete transactions. From ticket sales to registration fees, you can trust EventPlanner
+                                    Pro to handle payments efficiently, reducing the burden on your financial management.
+                                </p>
+                                <a href="#">Learn More</a>
+                            </div>
+                            <div class="showcase-box">
+                                <div class="icon">
+                                    <img src="./assets/icons/form.png" alt="Form Icon" />
+                                </div>
+                                <h3>Customizable Registration Forms</h3>
+                                <p>
+                                    Tailor your registration process to your event's unique requirements with EventPlanner Pro's
+                                    customizable forms. Whether you need to gather specific attendee information, preferences, or dietary
+                                    restrictions, our platform allows you to create registration forms that match your event's needs. Make
+                                    attendee registration a breeze by collecting the exact data you need to enhance their experience.
+                                </p>
+                                <a href="#">Learn More</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
                 <div class="arrows">
                     <img class="left-arrow" id="left-arrow" src="./assets/icons/arrow-left.png" alt="Left Arrow Icon" />
                     <img class="right-arrow" id="right-arrow" src="./assets/icons/arrow-right.png" alt="Right Arrow Icon" />
@@ -226,5 +360,6 @@
                 </div>
             </div>
         </footer>
+        <script src="./js/main.js"></script>
     </body>
 </html>
